# tp1-cn

./: .coverage  .env.test  .gitignore  README.md  crossover.ipynb  mutation.ipynb  pyproject.toml
.github/workflows/: pytest.yml
assets/statistics/: -wine-test.csv  -wine-train-mean.csv  -wine-train-std.csv  0-elitism-test.csv  0-elitism-train-mean.csv  0-elitism-train-std.csv  0.05-leaf-test.csv  0.05-leaf-train-mean.csv  0.05-leaf-train-std.csv  0.2-leaf-test.csv  0.2-leaf-train-mean.csv  0.2-leaf-train-std.csv  0.2-swap-op-test.csv  0.2-swap-op-train-mean.csv  0.2-swap-op-train-std.csv  0.2-swap-ter-test.csv  0.2-swap-ter-train-mean.csv  0.2-swap-ter-train-std.csv  0.3-leaf-test.csv  0.3-leaf-train-mean.csv  0.3-leaf-train-std.csv  0.4-leaf-test.csv  0.4-leaf-train-mean.csv  0.4-leaf-train-std.csv  0.5-leaf-test.csv  0.5-leaf-train-mean.csv  0.5-leaf-train-std.csv  0.8-swap-op-test.csv  0.8-swap-op-train-mean.csv  0.8-swap-op-train-std.csv  0.8-swap-ter-test.csv  0.8-swap-ter-train-mean.csv  0.8-swap-ter-train-std.csv  100-generations-test.csv  100-generations-train-mean.csv  100-generations-train-std.csv  100-population-test.csv  100-population-train-mean.csv  100-population-train-std.csv  30-generations-test.csv  (+28 more)
data/: wineRed-train.csv  wine_red_test.csv
docs/: bib.yml  report.typ
dumps/: -0-wine.csv  -1-wine.csv  -2-wine.csv  -3-wine.csv  -4-wine.csv  -5-wine.csv  -6-wine.csv  -7-wine.csv  -8-wine.csv  -9-wine.csv  0-0-elitism.csv  0-1-elitism.csv  0-2-elitism.csv  0-3-elitism.csv  0-4-elitism.csv  0-5-elitism.csv  0-6-elitism.csv  0-7-elitism.csv  0-8-elitism.csv  0-9-elitism.csv  0.05-0-leaf.csv  0.05-1-leaf.csv  0.05-2-leaf.csv  0.05-3-leaf.csv  0.05-4-leaf.csv  0.05-5-leaf.csv  0.05-6-leaf.csv  0.05-7-leaf.csv  0.05-8-leaf.csv  0.05-9-leaf.csv  0.2-0-leaf.csv  0.2-0-swap-op.csv  0.2-0-swap-ter.csv  0.2-1-leaf.csv  0.2-1-swap-op.csv  0.2-1-swap-ter.csv  0.2-2-leaf.csv  0.2-2-swap-op.csv  0.2-2-swap-ter.csv  0.2-3-leaf.csv  (+210 more)
dumps/500-pop/: 100-0-generations.csv  100-1-generations.csv  100-2-generations.csv  100-3-generations.csv  100-4-generations.csv  100-5-generations.csv  100-6-generations.csv  100-7-generations.csv  100-8-generations.csv  100-9-generations.csv  30-0-generations.csv  30-1-generations.csv  30-2-generations.csv  30-3-generations.csv  30-4-generations.csv  (+19 more)
run/: batch-run-elitism.fish  batch-run-generations.fish  batch-run-leaf.fish  batch-run-operators.fish  batch-run-population.fish  batch-run-swap.fish  batch-run-tournament.fish  batch-run-wine.fish
scripts/: config.py  extract_statistics.py  plot_mean_children.py  plot_mean_fitness.py  plot_mean_repetitions.py  plot_median_fitness.py
src/: __main__.py  app.py  args.py  config.py  constants.py  crossover.py  datasets.py  elitism.py  evaluate.py  genetic_programming.py  globals.py  jupyter.py  mutate.py  operations.py  select.py  util.py
test/: test_elitism.py  test_mutate.py  test_select.py  test_util.py
(+22 files in other folders)
